# MAMMOTH

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: tutorial_mammoth_visualization.py
examples/config/: __init__.py  paths.py
millab/: __init__.py
millab/scripts/: test_base_mammoth_load.py
millab/src/model_configs/abmil/: base.yaml  base_mammoth.yaml
millab/src/model_configs/clam/: base.yaml  base_ce.yaml  base_ce_subtyping.yaml  base_mammoth.yaml  base_subtyping.yaml
millab/src/model_configs/dftd/: base.yaml  base_afs.yaml  base_mammoth.yaml
millab/src/model_configs/dsmil/: base.yaml  base_mammoth.yaml
millab/src/model_configs/ilra/: base.yaml  base_mammoth.yaml
millab/src/model_configs/rrt/: base.yaml  base_mammoth.yaml
millab/src/model_configs/transformer/: base.yaml  base_mammoth.yaml
millab/src/model_configs/transmil/: base.yaml  base_mammoth.yaml
millab/src/model_configs/wikg/: base.yaml  base_mammoth.yaml
millab/src/models/: abmil.py  clam.py  dftd.py  dsmil.py  ilra.py  rrt.py  transformer.py  transmil.py  wikg.py
src/mammoth/: __init__.py  components.py  mammoth.py
