[project]
name = "mammoth-moe"
version = "0.1.2"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "torch",
    "einops",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["assets*", "examples*", "MIL-Lab*", "test_mammoth*"]
include = ["mammoth*"]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
